--- a/clientSide/assets/style.css
+++ b/clientSide/assets/style.css
@@ -5,3 +5,13 @@
 	top: 0;
 	left: 0;
 }
+
+#info {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 15%;
+	padding-left: 20px;
+	padding-top: 3px;
+}
