--- a/clientSide/assets/style.css
+++ b/clientSide/assets/style.css
@@ -10,8 +10,8 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 100%;
+	width: calc(100% - 3px);
 	height: 15%;
-	padding-left: 20px;
+	padding-left: 3px;
 	padding-top: 3px;
 }
